# manga-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  webtoon_dl.py
src/: base.py  downloader.py  session.py
src/sites/: __init__.py  mangadex.py  manganato.py  webtoons.py
